Bug 327742 - Using Sketch_ink_big brush crashes krita after one or few strokes.
Summary: Using Sketch_ink_big brush crashes krita after one or few strokes.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 328555 328603 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-18 03:45 UTC by Francesco B.
Modified: 2013-12-10 09:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco B. 2013-11-18 03:45:35 UTC
Using Sketch_ink_big brush crashes krita after one or few strokes when the imput comes from a tablet (I have a wacom bamboo MTE-450). It doesn't happens with the mouse.

Reproducible: Always

Steps to Reproduce:
1. Create a default 1600x1200 100ppi 8Bits RGB canvas.
2. Select Sketch_ink_big brush. 
3. Start drawing without lifting your pen from the tablet.
Actual Results:  
Krita crashes at the start of the stroke or after few seconds of continuous drawing (i.e. WITHOUT lifting the pen from the tablet).

Expected Results:  
Not crashing.

gdb krita
GNU gdb (GDB) 7.5.91.20130417-cvs-ubuntu
Copyright (C) 2013 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from /opt/project-neon/bin/krita...Reading symbols from /usr/lib/debug/opt/project-neon/bin/krita...done.
done.
(gdb) run
Starting program: /opt/project-neon/bin/krita 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Compiled for arch: ::Vc::SSSE3Impl 
Features supported: 
	 "SSE2" 	---	 yes 
	 "SSSE3" 	---	 yes 
	 "SSE4.1" 	---	 no 
	 "AVX " 	---	 no 
[New Thread 0x7fffd0b9f700 (LWP 5746)]
[New Thread 0x7fffd039e700 (LWP 5747)]
QCoreApplication::postEvent: Unexpected null receiver
[New Thread 0x7fffcf542700 (LWP 5748)]
[New Thread 0x7fffced41700 (LWP 5749)]
[New Thread 0x7fffce43f700 (LWP 5750)]
[New Thread 0x7fffcdc3e700 (LWP 5751)]
[Thread 0x7fffcdc3e700 (LWP 5751) exited]
QCoreApplication::postEvent: Unexpected null receiver
[Thread 0x7fffcf542700 (LWP 5748) exited]
[Thread 0x7fffced41700 (LWP 5749) exited]
[Thread 0x7fffce43f700 (LWP 5750) exited]
[New Thread 0x7fffce43f700 (LWP 5753)]
[New Thread 0x7fffced41700 (LWP 5754)]
[New Thread 0x7fffcf542700 (LWP 5755)]
[New Thread 0x7fffcdc3e700 (LWP 5756)]
[Thread 0x7fffced41700 (LWP 5754) exited]
[Thread 0x7fffcf542700 (LWP 5755) exited]
[Thread 0x7fffcdc3e700 (LWP 5756) exited]
[Thread 0x7fffce43f700 (LWP 5753) exited]
[New Thread 0x7fffce43f700 (LWP 5757)]
[New Thread 0x7fffcdc3e700 (LWP 5758)]
[New Thread 0x7fffcf542700 (LWP 5759)]
[New Thread 0x7fffced41700 (LWP 5760)]
[New Thread 0x7fffae7a3700 (LWP 5761)]
[New Thread 0x7fffadfa2700 (LWP 5762)]
[New Thread 0x7fffad7a1700 (LWP 5763)]
[Thread 0x7fffad7a1700 (LWP 5763) exited]
[Thread 0x7fffadfa2700 (LWP 5762) exited]
[Thread 0x7fffae7a3700 (LWP 5761) exited]
[New Thread 0x7fffae7a3700 (LWP 5764)]
[New Thread 0x7fffadfa2700 (LWP 5765)]
[New Thread 0x7fffad7a1700 (LWP 5766)]
[Thread 0x7fffad7a1700 (LWP 5766) exited]
[New Thread 0x7fffad7a1700 (LWP 5767)]
[Thread 0x7fffad7a1700 (LWP 5767) exited]
[New Thread 0x7fffad7a1700 (LWP 5768)]
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 
krita(5741) SpaceNavigatorDevice::start: starting spacenavigator device...
[New Thread 0x7fff1914b700 (LWP 5769)]
connect failed: No such file or directory
[Thread 0x7fff1914b700 (LWP 5769) exited]
krita(5741)/kdeui (kdelibs): No such XML file "/home/charblaze/.kde/share/apps/" 
WARNING (KoResourceItemChooser::updatePreview): the resource "2B pencil Grain 2 b" has created a non-rgb32 image thumbnail. It may not work properly. 
WARNING (KoResourceItemChooser::updatePreview): the resource "2B pencil Grain 2 b" has created a non-rgb32 image thumbnail. It may not work properly. 
Object::disconnect: Unexpected null parameter
Object::disconnect: Unexpected null parameter
Object::disconnect: Unexpected null parameter
Object::disconnect: Unexpected null parameter
WARNING (KoResourceItemChooser::updatePreview): the resource "2B pencil Grain 2 b" has created a non-rgb32 image thumbnail. It may not work properly. 
WARNING (KoResourceItemChooser::updatePreview): the resource "2B pencil Grain 2 b" has created a non-rgb32 image thumbnail. It may not work properly. 
[New Thread 0x7fff1914b700 (LWP 5771)]
[New Thread 0x7fff166ef700 (LWP 5772)]
[New Thread 0x7fff15eee700 (LWP 5773)]
[New Thread 0x7fff156ed700 (LWP 5774)]
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 
krita(5741)/koffice: Lcms2 error:  5 Read from memory error. Got 0 bytes, block should be of 128 bytes 

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffcf542700 (LWP 5759)]
KoColorSpaceAbstract<KoBgrU8Traits>::opacityU8 (this=0xce1a60, 
    U8_pixel=0x8000b0041164 <Address 0x8000b0041164 out of bounds>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/libs/pigment/KoColorSpaceAbstract.h:105
105	/build/buildd/krita-testing-2+git20131115+r74371-45/libs/pigment/KoColorSpaceAbstract.h: No such file or directory.
(gdb) thread apply all backtrace

Thread 28 (Thread 0x7fff156ed700 (LWP 5774)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 27 (Thread 0x7fff15eee700 (LWP 5773)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

---Type <return> to continue, or q <return> to quit---
Thread 26 (Thread 0x7fff166ef700 (LWP 5772)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 25 (Thread 0x7fff1914b700 (LWP 5771)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 23 (Thread 0x7fffad7a1700 (LWP 5768)):
---Type <return> to continue, or q <return> to quit---
#0  0x00007fffee6b9ca4 in pthread_cond_wait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fffecb1ab27 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fffecb1ab59 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 20 (Thread 0x7fffadfa2700 (LWP 5765)):
#0  0x00007ffff7461e23 in select () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007ffff4de84f3 in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4ded499 in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4dedc82 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007ffff4dbb38f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007ffff4dbb618 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007ffff4cbd410 in QThread::exec() ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
---Type <return> to continue, or q <return> to quit---
#7  0x00007ffff4d9cedf in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 19 (Thread 0x7fffae7a3700 (LWP 5764)):
#0  0x00007fffee6b9ca4 in pthread_cond_wait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc014b in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff5c977a6 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 15 (Thread 0x7fffced41700 (LWP 5760)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
---Type <return> to continue, or q <return> to quit---
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 14 (Thread 0x7fffcf542700 (LWP 5759)):
#0  KoColorSpaceAbstract<KoBgrU8Traits>::opacityU8 (this=0xce1a60, 
    U8_pixel=0x8000b0041164 <Address 0x8000b0041164 out of bounds>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/libs/pigment/KoColorSpaceAbstract.h:105
#1  0x00007fffb7df4933 in KisSketchPaintOp::paintLine (this=0x7fffbdd831c0, 
    pi1=..., pi2=..., currentDistance=<optimized out>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/plugins/paintops/sketch/kis_sketch_paintop.cpp:213
#2  0x00007ffff3663b52 in paintBezierCurve (paintOp=0x7fffbdd831c0, pi1=..., 
    control1=..., control2=..., pi2=..., currentDistance=0x1cf9720)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/image/brushengine/kis_paintop.cc:141
#3  0x00007ffff3663bca in KisPaintOp::paintBezierCurve (this=<optimized out>, 
    pi1=..., control1=..., control2=..., pi2=..., 
    currentDistance=<optimized out>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/image/brushengine/kis_paintop.cc:164
---Type <return> to continue, or q <return> to quit---
#4  0x00007ffff6fc580e in FreehandStrokeStrategy::doStrokeCallback (
    this=<optimized out>, data=<optimized out>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/ui/tool/strokes/freehand_stroke.cpp:76
#5  0x00007ffff36167ca in KisUpdateJobItem::run (this=0x13b7a50)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/obj-x86_64-linux-gnu/krita/image/../../../krita/image/kis_update_job_item.h:61
#6  0x00007ffff4cb355d in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 13 (Thread 0x7fffcdc3e700 (LWP 5758)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6
---Type <return> to continue, or q <return> to quit---

Thread 12 (Thread 0x7fffce43f700 (LWP 5757)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cb364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 3 (Thread 0x7fffd039e700 (LWP 5747)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cbe7f6 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cbf02d in QThread::msleep(unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff364bb6a in KisTileDataSwapper::run (this=0xd02e88)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/image/tiles3/swap/kis_tile_data_swapper.cpp:97
#4  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007fffee6b5f8e in start_thread ()
---Type <return> to continue, or q <return> to quit---
   from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 2 (Thread 0x7fffd0b9f700 (LWP 5746)):
#0  0x00007fffee6ba05e in pthread_cond_timedwait@@GLIBC_2.3.2 ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007ffff4cc00a7 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff4cbc400 in QSemaphore::tryAcquire(int, int) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff361d9ea in waitForWork (this=0xd02e50)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/image/tiles3/kis_tile_data_pooler.cc:160
#4  KisTileDataPooler::run (this=0xd02e50)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/image/tiles3/kis_tile_data_pooler.cc:184
#5  0x00007ffff4cbfbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007fffee6b5f8e in start_thread ()
   from /lib/x86_64-linux-gnu/libpthread.so.0
#7  0x00007ffff7469a0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7ffff7fb97c0 (LWP 5741)):
#0  0x00007ffff5987515 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
---Type <return> to continue, or q <return> to quit---
#1  0x00007ffff5987564 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#2  0x00007ffff598be04 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#3  0x00007ffff598c298 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#4  0x00007ffff596841c in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#5  0x00007ffff596e06b in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#6  0x00007ffff58fd2bd in QPainter::drawImage(QRectF const&, QImage const&, QRectF const&, QFlags<Qt::ImageConversionFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#7  0x00007ffff6d7ecaa in KisQPainterCanvas::paintEvent (this=0x1e3b680, 
    ev=0x7fffffffd670)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/ui/canvas/kis_qpainter_canvas.cpp:153
#8  0x00007ffff57f3a3e in QWidget::event(QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#9  0x00007ffff57a68ec in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#10 0x00007ffff57a925b in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#11 0x00007ffff69294a8 in KoApplication::notify (this=<optimized out>, 
    receiver=0x1e3b680, event=0x7fffffffd670)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/libs/main/KoApplication.cpp:549
#12 0x00007ffff4dbc63e in QCoreApplication::notifyInternal(QObject*, QEvent*)
---Type <return> to continue, or q <return> to quit---
    () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#13 0x00007ffff57f86b4 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#14 0x00007ffff59bdeed in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#15 0x00007ffff57e7060 in QWidgetPrivate::syncBackingStore() ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#16 0x00007ffff57f3ee4 in QWidget::event(QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#17 0x00007ffff5bbf9ab in QMainWindow::event(QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#18 0x00007ffff65a2218 in KXmlGuiWindow::event(QEvent*) ()
   from /usr/lib/libkdeui.so.5
#19 0x00007ffff57a68ec in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#20 0x00007ffff57a925b in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#21 0x00007ffff69294a8 in KoApplication::notify (this=<optimized out>, 
    receiver=0xb540e0, event=0x1a5f810)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/libs/main/KoApplication.cpp:549
#22 0x00007ffff4dbc63e in QCoreApplication::notifyInternal(QObject*, QEvent*)
    () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
---Type <return> to continue, or q <return> to quit---
#23 0x00007ffff4dc0171 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#24 0x00007ffff584c98c in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#25 0x00007ffff4dbb38f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#26 0x00007ffff4dbb618 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#27 0x00007ffff4dc0cf6 in QCoreApplication::exec() ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#28 0x00007ffff79737ca in kdemain (argc=<optimized out>, argv=<optimized out>)
    at /build/buildd/krita-testing-2+git20131115+r74371-45/krita/main.cc:99
#29 0x00007ffff7390ea5 in __libc_start_main ()
   from /lib/x86_64-linux-gnu/libc.so.6
#30 0x0000000000400711 in _start ()
(gdb)
Comment 1 Halla Rempt 2013-11-19 14:14:46 UTC
Outch! I can indeed reproduce, even with git master:


Thread 2 (Thread 0x7fe2dbfff700 (LWP 7608)):
[KCrash Handler]
#5  KoColorSpaceAbstract<KoBgrU8Traits>::opacityU8 (this=0x2d21cb0, U8_pixel=0x7fe3dc13e778 <Address 0x7fe3dc13e778 out of bounds>) at /home/boud/kde/src/calligra/libs/pigment/KoColorSpaceAbstract.h:105
#6  0x00007fe31dce38f2 in KisSketchPaintOp::paintLine (this=0x7fe2dc07ad00, pi1=..., pi2=..., currentDistance=<optimized out>) at /home/boud/kde/src/calligra/krita/plugins/paintops/sketch/kis_sketch_paintop.cpp:213
#7  0x00007fe344aa2ec2 in paintBezierCurve (paintOp=paintOp@entry=0x7fe2dc07ad00, pi1=..., control1=..., control2=..., pi2=..., currentDistance=currentDistance@entry=0x613ee30) at /home/boud/kde/src/calligra/krita/image/brushengine/kis_paintop.cc:141
#8  0x00007fe344aa2e92 in paintBezierCurve (paintOp=0x7fe2dc07ad00, pi1=..., control1=..., control2=..., pi2=..., currentDistance=0x613ee30) at /home/boud/kde/src/calligra/krita/image/brushengine/kis_paintop.cc:154
#9  0x00007fe344aa2f3a in KisPaintOp::paintBezierCurve (this=<optimized out>, pi1=..., control1=..., control2=..., pi2=..., currentDistance=<optimized out>) at /home/boud/kde/src/calligra/krita/image/brushengine/kis_paintop.cc:164
#10 0x00007fe3452fb20e in FreehandStrokeStrategy::doStrokeCallback (this=<optimized out>, data=<optimized out>) at /home/boud/kde/src/calligra/krita/ui/tool/strokes/freehand_stroke.cpp:76
#11 0x00007fe344a55aba in KisUpdateJobItem::run (this=0x2e2de80) at /home/boud/kde/build/calligra/krita/image/../../../../src/calligra/krita/image/kis_update_job_item.h:61
#12 0x00007fe33db20c9d in ?? () from /usr/lib64/libQtCore.so.4
#13 0x00007fe33db2d0cc in ?? () from /usr/lib64/libQtCore.so.4
#14 0x00007fe344108764 in ?? () from /usr/X11R6/lib64/libGL.so.1
#15 0x00007fe33d896e0f in start_thread () from /lib64/libpthread.so.0
#16 0x00007fe33cb5844d in clone () from /lib64/libc.so.6
Comment 2 Halla Rempt 2013-11-19 14:29:18 UTC
Git commit cd166df17c952a7d5a5cea9e33ba2bd86a83917c by Boudewijn Rempt.
Committed on 19/11/2013 at 14:28.
Pushed by rempt into branch 'master'.

Do not try to read the mask beyond its end

M  +9    -6    krita/plugins/paintops/sketch/kis_sketch_paintop.cpp

http://commits.kde.org/calligra/cd166df17c952a7d5a5cea9e33ba2bd86a83917c
Comment 3 Jekyll Wu 2013-12-10 00:40:02 UTC
*** Bug 328603 has been marked as a duplicate of this bug. ***
Comment 4 Dmitry Kazakov 2013-12-10 09:57:48 UTC
*** Bug 328555 has been marked as a duplicate of this bug. ***