Do not try to read the mask beyond its end

BUG:327742